--- a/netcore/Views/Account/AccessDenied.cshtml
+++ b/netcore/Views/Account/AccessDenied.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Access denied";
+    Layout = "_AdminlteBlank";
 }
 
-<header>
-    <h2 class="text-danger">@ViewData["Title"]</h2>
-    <p class="text-danger">You do not have access to this resource.</p>
-</header>
+
+<div class="text-center">
+    <h3>You do not have access to this resource.</h3>
+</div>
