--- a/netcore/Views/Account/ConfirmEmail.cshtml
+++ b/netcore/Views/Account/ConfirmEmail.cshtml
@@ -1,10 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Confirm email";
+    Layout = "_AdminlteBlank";
 }
 
-<h2>@ViewData["Title"]</h2>
-<div>
-    <p>
-        Thank you for confirming your email.
-    </p>
+
+<div class="text-center">
+    <h3>Thank you for confirming your email.</h3>
 </div>
