--- a/netcore/Views/Account/ConfirmEmailNotification.cshtml
+++ b/netcore/Views/Account/ConfirmEmailNotification.cshtml
@@ -1,11 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Confirm email notification";
+    Layout = "_AdminlteBlank";
 }
 
-<h2>@ViewData["Title"]</h2>
-<div>
-    <p>
-        We have sent email confirmation to your registered email address.
-        Please follow the email instruction for account activation.
-    </p>
+
+<div class="text-center">
+    <h3>We have sent email confirmation to your registered email address.</h3>
+    <h4>Please follow the email instruction for account activation.</h4>
 </div>
