--- a/netcore/Views/Account/ForgotPassword.cshtml
+++ b/netcore/Views/Account/ForgotPassword.cshtml
@@ -1,24 +1,32 @@
 ﻿@model ForgotPasswordViewModel
 @{
     ViewData["Title"] = "Forgot your password?";
+    Layout = "_AdminlteRegister";
 }
 
-<h2>@ViewData["Title"]</h2>
-<h4>Enter your email.</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="register-box">
+    <div class="register-logo">
+        <a href="@netcore.MVC.Pages.HomeIndex.Url"><b>ASP</b>.NET</a>
+    </div>
+    <div class="register-box-body">
+        <p class="login-box-msg">Forgot Password</p>
         <form asp-action="ForgotPassword" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group has-feedback">
                 <label asp-for="Email"></label>
-                <input asp-for="Email" class="form-control" />
+                <input asp-for="Email" type="email" class="form-control" placeholder="Email" />
+                <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-primary btn-block btn-flat">Reset Password</button>
         </form>
+        
+
+
     </div>
+    <!-- /.form-box -->
 </div>
+
+
 
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
