--- a/netcore/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/netcore/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Forgot password confirmation";
+    Layout = "_AdminlteBlank";
 }
 
-<h2>@ViewData["Title"]</h2>
-<p>
-    Please check your email to reset your password.
-</p>
+
+<div class="text-center">
+    <h3>Please check your email to reset your password.</h3>
+</div>
