--- a/netcore/Views/Account/Lockout.cshtml
+++ b/netcore/Views/Account/Lockout.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Locked out";
+    Layout = "_AdminlteBlank";
 }
 
-<header>
-    <h2 class="text-danger">@ViewData["Title"]</h2>
-    <p class="text-danger">This account has been locked out, please try again later.</p>
-</header>
+
+<div class="text-center">
+    <h3>This account has been locked out, please try again later.</h3>
+</div>
