--- a/netcore/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/netcore/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Reset password confirmation";
+    Layout = "_AdminlteBlank";
 }
 
-<h2>@ViewData["Title"]</h2>
-<p>
-    Your password has been reset. Please <a asp-action="Login">click here to log in</a>.
-</p>
+<div class="text-center">
+    <h3>Your password has been reset. Please <a asp-action="Login">click here to log in</a>.</h3>
+</div>
