--- a/netcore/Views/Account/SignedOut.cshtml
+++ b/netcore/Views/Account/SignedOut.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Signed out";
+    Layout = "_AdminlteBlank";
 }
 
-<h2>@ViewData["Title"]</h2>
-<p>
-    You have successfully signed out.
-</p>
+<div class="text-center">
+    <h3>You have successfully signed out.</h3>
+</div>
