--- a/netcore/Views/Adminlte/Error500.cshtml
+++ b/netcore/Views/Adminlte/Error500.cshtml
@@ -1,7 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "Home Index";
-    Layout = "_AdminlteNetcore";
+    ViewData["Title"] = "Error500";
 }
 
 
@@ -11,41 +10,38 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
         <h1>
-            Blank page
-            <small>it all starts here</small>
+            500 Error Page
         </h1>
         <ol class="breadcrumb">
             <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
             <li><a href="#">Examples</a></li>
-            <li class="active">Blank page</li>
+            <li class="active">500 error</li>
         </ol>
     </section>
     <!-- Main content -->
     <section class="content">
-        <!-- Default box -->
-        <div class="box">
-            <div class="box-header with-border">
-                <h3 class="box-title">Title</h3>
-                <div class="box-tools pull-right">
-                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip"
-                            title="Collapse">
-                        <i class="fa fa-minus"></i>
-                    </button>
-                    <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
-                        <i class="fa fa-times"></i>
-                    </button>
-                </div>
+        <div class="error-page">
+            <h2 class="headline text-red">500</h2>
+            <div class="error-content">
+                <h3><i class="fa fa-warning text-red"></i> Oops! Something went wrong.</h3>
+                <p>
+                    We will work on fixing that right away.
+                    Meanwhile, you may <a href="@lte.MVC.Pages.Dashbaordv1.Url">return to dashboard</a> or try using the search form.
+                </p>
+                <form class="search-form">
+                    <div class="input-group">
+                        <input type="text" name="search" class="form-control" placeholder="Search">
+                        <div class="input-group-btn">
+                            <button type="submit" name="submit" class="btn btn-danger btn-flat">
+                                <i class="fa fa-search"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <!-- /.input-group -->
+                </form>
             </div>
-            <div class="box-body">
-                Start creating your amazing application!
-            </div>
-            <!-- /.box-body -->
-            <div class="box-footer">
-                Footer
-            </div>
-            <!-- /.box-footer-->
         </div>
-        <!-- /.box -->
+        <!-- /.error-page -->
     </section>
     <!-- /.content -->
 </div>
