--- a/netcore/Views/Shared/_AdminlteMainHeader.cshtml
+++ b/netcore/Views/Shared/_AdminlteMainHeader.cshtml
@@ -1,10 +1,10 @@
 ﻿<header class="main-header">
     <!-- Logo -->
-    <a href="@lte.MVC.Pages.Dashbaordv1.Url" class="logo">
+    <a href="@netcore.MVC.Pages.HomeIndex.Url" class="logo">
         <!-- mini logo for sidebar mini 50x50 pixels -->
-        <span class="logo-mini"><b>A</b>LT</span>
+        <span class="logo-mini"><b>N</b>ET</span>
         <!-- logo for regular state and mobile devices -->
-        <span class="logo-lg"><b>Admin</b>LTE</span>
+        <span class="logo-lg"><b>ASP</b>.NET</span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top">
