--- a/netcore/Views/Shared/_AdminlteMainSidebar.cshtml
+++ b/netcore/Views/Shared/_AdminlteMainSidebar.cshtml
@@ -26,7 +26,7 @@
         <!-- sidebar menu: : style can be found in sidebar.less -->
         <ul class="sidebar-menu" data-widget="tree">
             <li class="header">MAIN NAVIGATION</li>
-            <li class="@Html.IsSelected(controller: "Dashboard") treeview">
+            <li class="@Html.IsSelected(actions: "Dashboardv1,Dashboardv2") treeview">
                 <a href="#">
                     <i class="fa fa-dashboard"></i> <span>Dashboard</span>
                     <span class="pull-right-container">
@@ -34,11 +34,11 @@
                     </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li class="@Html.IsSelected(controller: "Dashboard", action: "Dashboardv1")"><a href="@lte.MVC.Pages.Dashbaordv1.Url"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-                    <li class="@Html.IsSelected(controller: "Dashboard", action: "Dashboardv2")"><a href="@lte.MVC.Pages.Dashbaordv2.Url"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+                    <li class="@Html.IsSelected(controller: "Adminlte", action: "Dashboardv1")"><a href="@lte.MVC.Pages.Dashbaordv1.Url"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
+                    <li class="@Html.IsSelected(controller: "Adminlte", action: "Dashboardv2")"><a href="@lte.MVC.Pages.Dashbaordv2.Url"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
                 </ul>
             </li>
-            <li class="@Html.IsSelected(controller: "Layout") treeview">
+            <li class="@Html.IsSelected(actions: "Top,Boxed,Fixed,Collapsed") treeview">
                 <a href="#">
                     <i class="fa fa-files-o"></i>
                     <span>Layout Options</span>
@@ -47,13 +47,13 @@
                     </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li class="@Html.IsSelected(controller: "Layout", action: "Top")"><a href="@lte.MVC.Pages.LayoutTop.Url"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
-                    <li class="@Html.IsSelected(controller: "Layout", action: "Boxed")"><a href="@lte.MVC.Pages.LayoutBoxed.Url"><i class="fa fa-circle-o"></i> Boxed</a></li>
-                    <li class="@Html.IsSelected(controller: "Layout", action: "Fixed")"><a href="@lte.MVC.Pages.LayoutFixed.Url"><i class="fa fa-circle-o"></i> Fixed</a></li>
-                    <li class="@Html.IsSelected(controller: "Layout", action: "Collapsed")"><a href="@lte.MVC.Pages.LayoutCollapsed.Url"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
+                    <li class="@Html.IsSelected(action: "Top")"><a href="@lte.MVC.Pages.LayoutTop.Url"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
+                    <li class="@Html.IsSelected(action: "Boxed")"><a href="@lte.MVC.Pages.LayoutBoxed.Url"><i class="fa fa-circle-o"></i> Boxed</a></li>
+                    <li class="@Html.IsSelected(action: "Fixed")"><a href="@lte.MVC.Pages.LayoutFixed.Url"><i class="fa fa-circle-o"></i> Fixed</a></li>
+                    <li class="@Html.IsSelected(action: "Collapsed")"><a href="@lte.MVC.Pages.LayoutCollapsed.Url"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
                 </ul>
             </li>
-            <li class="@Html.IsSelected(controller: "Widget")">
+            <li class="@Html.IsSelected(actions: "Widget")">
                 <a href="@lte.MVC.Pages.WidgetIndex.Url">
                     <i class="fa fa-th"></i> <span>Widgets</span>
                     <span class="pull-right-container">
@@ -61,7 +61,7 @@
                     </span>
                 </a>
             </li>
-            <li class="@Html.IsSelected(controller: "Chart") treeview">
+            <li class="@Html.IsSelected(actions: "ChartJS,Morris,Flot,Inline") treeview">
                 <a href="#">
                     <i class="fa fa-pie-chart"></i>
                     <span>Charts</span>
@@ -70,13 +70,13 @@
                     </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li class="@Html.IsSelected(controller: "Chart", action: "ChartJS")"><a href="@lte.MVC.Pages.ChartChartJS.Url"><i class="fa fa-circle-o"></i> ChartJS</a></li>
-                    <li class="@Html.IsSelected(controller: "Chart", action: "Morris")"><a href="@lte.MVC.Pages.ChartMorris.Url"><i class="fa fa-circle-o"></i> Morris</a></li>
-                    <li class="@Html.IsSelected(controller: "Chart", action: "Flot")"><a href="@lte.MVC.Pages.ChartFlot.Url"><i class="fa fa-circle-o"></i> Flot</a></li>
-                    <li class="@Html.IsSelected(controller: "Chart", action: "Inline")"><a href="@lte.MVC.Pages.ChartInline.Url"><i class="fa fa-circle-o"></i> Inline charts</a></li>
+                    <li class="@Html.IsSelected(controller: "Adminlte", action: "ChartJS")"><a href="@lte.MVC.Pages.ChartChartJS.Url"><i class="fa fa-circle-o"></i> ChartJS</a></li>
+                    <li class="@Html.IsSelected(controller: "Adminlte", action: "Morris")"><a href="@lte.MVC.Pages.ChartMorris.Url"><i class="fa fa-circle-o"></i> Morris</a></li>
+                    <li class="@Html.IsSelected(controller: "Adminlte", action: "Flot")"><a href="@lte.MVC.Pages.ChartFlot.Url"><i class="fa fa-circle-o"></i> Flot</a></li>
+                    <li class="@Html.IsSelected(controller: "Adminlte", action: "Inline")"><a href="@lte.MVC.Pages.ChartInline.Url"><i class="fa fa-circle-o"></i> Inline charts</a></li>
                 </ul>
             </li>
-            <li class="@Html.IsSelected(controller: "UIElement") treeview">
+            <li class="@Html.IsSelected(actions: "General,Icon,Button,Slider,Timeline,Modal") treeview">
                 <a href="#">
                     <i class="fa fa-laptop"></i>
                     <span>UI Elements</span>
@@ -85,15 +85,15 @@
                     </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li class="@Html.IsSelected(controller: "UIElement", action: "General")"><a href="@lte.MVC.Pages.UIElementGeneral.Url"><i class="fa fa-circle-o"></i> General</a></li>
-                    <li class="@Html.IsSelected(controller: "UIElement", action: "Icon")"><a href="@lte.MVC.Pages.UIElementIcon.Url"><i class="fa fa-circle-o"></i> Icons</a></li>
-                    <li class="@Html.IsSelected(controller: "UIElement", action: "Button")"><a href="@lte.MVC.Pages.UIElementButton.Url"><i class="fa fa-circle-o"></i> Buttons</a></li>
-                    <li class="@Html.IsSelected(controller: "UIElement", action: "Slider")"><a href="@lte.MVC.Pages.UIElementSlider.Url"><i class="fa fa-circle-o"></i> Sliders</a></li>
-                    <li class="@Html.IsSelected(controller: "UIElement", action: "Timeline")"><a href="@lte.MVC.Pages.UIElementTimeline.Url"><i class="fa fa-circle-o"></i> Timeline</a></li>
-                    <li class="@Html.IsSelected(controller: "UIElement", action: "Modal")"><a href="@lte.MVC.Pages.UIElementModal.Url"><i class="fa fa-circle-o"></i> Modals</a></li>
+                    <li class="@Html.IsSelected(action: "General")"><a href="@lte.MVC.Pages.UIElementGeneral.Url"><i class="fa fa-circle-o"></i> General</a></li>
+                    <li class="@Html.IsSelected(action: "Icon")"><a href="@lte.MVC.Pages.UIElementIcon.Url"><i class="fa fa-circle-o"></i> Icons</a></li>
+                    <li class="@Html.IsSelected(action: "Button")"><a href="@lte.MVC.Pages.UIElementButton.Url"><i class="fa fa-circle-o"></i> Buttons</a></li>
+                    <li class="@Html.IsSelected(action: "Slider")"><a href="@lte.MVC.Pages.UIElementSlider.Url"><i class="fa fa-circle-o"></i> Sliders</a></li>
+                    <li class="@Html.IsSelected(action: "Timeline")"><a href="@lte.MVC.Pages.UIElementTimeline.Url"><i class="fa fa-circle-o"></i> Timeline</a></li>
+                    <li class="@Html.IsSelected(action: "Modal")"><a href="@lte.MVC.Pages.UIElementModal.Url"><i class="fa fa-circle-o"></i> Modals</a></li>
                 </ul>
             </li>
-            <li class="@Html.IsSelected(controller: "Form") treeview">
+            <li class="@Html.IsSelected(actions: "Form,Advanced,Editor")  treeview">
                 <a href="#">
                     <i class="fa fa-edit"></i> <span>Forms</span>
                     <span class="pull-right-container">
@@ -101,12 +101,12 @@
                     </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li class="@Html.IsSelected(controller: "Form", action: "General")"><a href="@lte.MVC.Pages.FormGeneral.Url"><i class="fa fa-circle-o"></i> General Elements</a></li>
-                    <li class="@Html.IsSelected(controller: "Form", action: "Advanced")"><a href="@lte.MVC.Pages.FormAdvanced.Url"><i class="fa fa-circle-o"></i> Advanced Elements</a></li>
-                    <li class="@Html.IsSelected(controller: "Form", action: "Editor")"><a href="@lte.MVC.Pages.FormEditor.Url"><i class="fa fa-circle-o"></i> Editors</a></li>
+                    <li class="@Html.IsSelected(action: "Form")"><a href="@lte.MVC.Pages.FormGeneral.Url"><i class="fa fa-circle-o"></i> General Elements</a></li>
+                    <li class="@Html.IsSelected(action: "Advanced")"><a href="@lte.MVC.Pages.FormAdvanced.Url"><i class="fa fa-circle-o"></i> Advanced Elements</a></li>
+                    <li class="@Html.IsSelected(action: "Editor")"><a href="@lte.MVC.Pages.FormEditor.Url"><i class="fa fa-circle-o"></i> Editors</a></li>
                 </ul>
             </li>
-            <li class="@Html.IsSelected(controller: "Table") treeview">
+            <li class="@Html.IsSelected(actions: "Simple,Data") treeview">
                 <a href="#">
                     <i class="fa fa-table"></i> <span>Tables</span>
                     <span class="pull-right-container">
@@ -114,11 +114,11 @@
                     </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li class="@Html.IsSelected(controller: "Table", action: "Simple")"><a href="@lte.MVC.Pages.TableSimple.Url"><i class="fa fa-circle-o"></i> Simple tables</a></li>
-                    <li class="@Html.IsSelected(controller: "Table", action: "Data")"><a href="@lte.MVC.Pages.TableData.Url"><i class="fa fa-circle-o"></i> Data tables</a></li>
+                    <li class="@Html.IsSelected(action: "Simple")"><a href="@lte.MVC.Pages.TableSimple.Url"><i class="fa fa-circle-o"></i> Simple tables</a></li>
+                    <li class="@Html.IsSelected(action: "Data")"><a href="@lte.MVC.Pages.TableData.Url"><i class="fa fa-circle-o"></i> Data tables</a></li>
                 </ul>
             </li>
-            <li class="@Html.IsSelected(controller: "Calendar")">
+            <li class="@Html.IsSelected(actions: "Calendar")">
                 <a href="@lte.MVC.Pages.CalendarIndex.Url">
                     <i class="fa fa-calendar"></i> <span>Calendar</span>
                     <span class="pull-right-container">
@@ -127,7 +127,7 @@
                     </span>
                 </a>
             </li>
-            <li class="@Html.IsSelected(controller: "Mailbox") treeview">
+            <li class="@Html.IsSelected(actions: "Index,Compose,Read") treeview">
                 <a href="#">
                     <i class="fa fa-envelope"></i> <span>Mailbox</span>
                     <span class="pull-right-container">
@@ -135,7 +135,7 @@
                     </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li class="@Html.IsSelected(controller: "Mailbox", action: "Index")">
+                    <li class="@Html.IsSelected(action: "Index")">
                         <a href="@lte.MVC.Pages.MailboxIndex.Url">
                             Inbox
                             <span class="pull-right-container">
@@ -143,12 +143,12 @@
                             </span>
                         </a>
                     </li>
-                    <li class="@Html.IsSelected(controller: "Mailbox", action: "Compose")"><a href="@lte.MVC.Pages.MailboxCompose.Url">Compose</a></li>
-                    <li class="@Html.IsSelected(controller: "Mailbox", action: "Read")"><a href="@lte.MVC.Pages.MailboxRead.Url">Read</a></li>
+                    <li class="@Html.IsSelected(action: "Compose")"><a href="@lte.MVC.Pages.MailboxCompose.Url">Compose</a></li>
+                    <li class="@Html.IsSelected(action: "Read")"><a href="@lte.MVC.Pages.MailboxRead.Url">Read</a></li>
                 </ul>
             </li>
             
-            <li class="@Html.IsSelected(controller: "Example") treeview">
+            <li class="@Html.IsSelected(actions: "Invoice,Profile,Login,Register,Lockscreen,Error404,Error500,BlankPage,PacePage") treeview">
                 <a href="#">
                     <i class="fa fa-folder"></i> <span>Examples</span>
                     <span class="pull-right-container">
@@ -156,15 +156,15 @@
                     </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li class="@Html.IsSelected(controller: "Example", action: "Invoice")"><a href="@lte.MVC.Pages.ExampleInvoice.Url"><i class="fa fa-circle-o"></i> Invoice</a></li>
-                    <li class="@Html.IsSelected(controller: "Example", action: "Profile")"><a href="@lte.MVC.Pages.ExampleProfile.Url"><i class="fa fa-circle-o"></i> Profile</a></li>
-                    <li class="@Html.IsSelected(controller: "Example", action: "Login")"><a href="@lte.MVC.Pages.ExampleLogin.Url"><i class="fa fa-circle-o"></i> Login</a></li>
-                    <li class="@Html.IsSelected(controller: "Example", action: "Register")"><a href="@lte.MVC.Pages.ExampleRegister.Url"><i class="fa fa-circle-o"></i> Register</a></li>
-                    <li class="@Html.IsSelected(controller: "Example", action: "Lockscreen")"><a href="@lte.MVC.Pages.ExampleLockscreen.Url"><i class="fa fa-circle-o"></i> Lockscreen</a></li>
-                    <li class="@Html.IsSelected(controller: "Example", action: "Error404")"><a href="@lte.MVC.Pages.ExampleError404.Url"><i class="fa fa-circle-o"></i> 404 Error</a></li>
-                    <li class="@Html.IsSelected(controller: "Example", action: "Error500")"><a href="@lte.MVC.Pages.ExampleError500.Url"><i class="fa fa-circle-o"></i> 500 Error</a></li>
-                    <li class="@Html.IsSelected(controller: "Example", action: "BlankPage")"><a href="@lte.MVC.Pages.ExampleBlankPage.Url"><i class="fa fa-circle-o"></i> Blank Page</a></li>
-                    <li class="@Html.IsSelected(controller: "Example", action: "PacePage")"><a href="@lte.MVC.Pages.ExamplePacePage.Url"><i class="fa fa-circle-o"></i> Pace Page</a></li>
+                    <li class="@Html.IsSelected(action: "Invoice")"><a href="@lte.MVC.Pages.ExampleInvoice.Url"><i class="fa fa-circle-o"></i> Invoice</a></li>
+                    <li class="@Html.IsSelected(action: "Profile")"><a href="@lte.MVC.Pages.ExampleProfile.Url"><i class="fa fa-circle-o"></i> Profile</a></li>
+                    <li class="@Html.IsSelected(action: "Login")"><a href="@lte.MVC.Pages.ExampleLogin.Url"><i class="fa fa-circle-o"></i> Login</a></li>
+                    <li class="@Html.IsSelected(action: "Register")"><a href="@lte.MVC.Pages.ExampleRegister.Url"><i class="fa fa-circle-o"></i> Register</a></li>
+                    <li class="@Html.IsSelected(action: "Lockscreen")"><a href="@lte.MVC.Pages.ExampleLockscreen.Url"><i class="fa fa-circle-o"></i> Lockscreen</a></li>
+                    <li class="@Html.IsSelected(action: "Error404")"><a href="@lte.MVC.Pages.ExampleError404.Url"><i class="fa fa-circle-o"></i> 404 Error</a></li>
+                    <li class="@Html.IsSelected(action: "Error500")"><a href="@lte.MVC.Pages.ExampleError500.Url"><i class="fa fa-circle-o"></i> 500 Error</a></li>
+                    <li class="@Html.IsSelected(action: "BlankPage")"><a href="@lte.MVC.Pages.ExampleBlankPage.Url"><i class="fa fa-circle-o"></i> Blank Page</a></li>
+                    <li class="@Html.IsSelected(action: "PacePage")"><a href="@lte.MVC.Pages.ExamplePacePage.Url"><i class="fa fa-circle-o"></i> Pace Page</a></li>
                 </ul>
             </li>
             <li class="treeview">
