--- a/netcore/Views/Manage/ChangeProfilePicture.cshtml
+++ b/netcore/Views/Manage/ChangeProfilePicture.cshtml
@@ -1,37 +1,140 @@
 ﻿@model netcore.Models.ApplicationUser
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+@inject netcore.Data.ApplicationDbContext Context
+
 @{
-    ViewData["Title"] = "ChangeProfilePicture";
+    ViewData["Title"] = "Change Profile Picture";
+    Layout = "_AdminlteNetcore";
+    ApplicationUser appUser = await UserManager.GetUserAsync(User);
 }
 
-<h2>ChangeProfilePicture</h2>
-@if (Model != null)
-{
+<!-- Content Wrapper. Contains page content -->
+<div class="content-wrapper">
+    <!-- Content Header (Page header) -->
+    <section class="content-header">
+        <h1>
+            User Profile
+        </h1>
+    </section>
+    <!-- Main content -->
+    <section class="content">
+        <div class="row">
+            <div class="col-md-3">
+                @if (appUser != null)
+                {
 
-    <div>
-        <img id="profilePicture" class="profile-user-img img-responsive img-circle" src="@Model.profilePictureUrl" alt="User profile picture">
-    </div>
-    <div>
-        <span class="btn btn-success fileinput-button">
-            <i class="fa fa-camera bg-green"></i>
-            <span>Select file ...</span>
-            <!-- The file input field used as target for the file upload widget -->
-            <input id="fileupload" type="file" name="files" multiple="">
-        </span>
-    </div>
-    <div>
-        <div id="progress" class="progress">
-            <div class="progress-bar progress-bar-success"></div>
+                    <!-- Profile Image -->
+                    <div class="box box-primary">
+                        <div class="box-body box-profile">
+                            <img class="profile-user-img img-responsive img-circle" src="@appUser.profilePictureUrl" alt="User profile picture">
+
+                            <h3 class="profile-username text-center">@appUser.Email</h3>
+                            <p class="text-muted text-center">Member</p>
+                            <ul class="list-group list-group-unbordered">
+                                <li class="list-group-item">
+                                    <b>Followers</b> <a class="pull-right">1,322</a>
+                                </li>
+                                <li class="list-group-item">
+                                    <b>Following</b> <a class="pull-right">543</a>
+                                </li>
+                            </ul>
+                            <a href="@Url.Action("ChangePassword", "Manage")" class="btn btn-primary btn-block">
+                                <i class="fa fa-key">
+                                    <span>Change Password</span>
+                                </i>
+                            </a>
+                        </div>
+                        <!-- /.box-body -->
+                    </div>
+                    <!-- /.box -->
+                }
+
+
+            </div>
+            <!-- /.col -->
+            <div class="col-md-9">
+                <div class="nav-tabs-custom">
+                    <ul class="nav nav-tabs">
+                        <li class="active"><a href="#picture" data-toggle="tab">Profile Picture</a></li>
+                    </ul>
+                    <div class="tab-content">
+                        <div class="active tab-pane" id="picture">
+                            @if (Model != null)
+                            {
+
+                                <div>
+                                    <img id="profilePicture" class="profile-user-img img-responsive img-circle" src="@Model.profilePictureUrl" alt="User profile picture">
+                                </div>
+                                <div>
+                                    <span class="btn btn-success fileinput-button">
+                                        <i class="fa fa-camera bg-green"></i>
+                                        <span>Select file ...</span>
+                                        <!-- The file input field used as target for the file upload widget -->
+                                        <input id="fileupload" type="file" name="files" multiple="">
+                                    </span>
+                                </div>
+                                <div>
+                                    <div id="progress" class="progress">
+                                        <div class="progress-bar progress-bar-success"></div>
+                                    </div>
+                                </div>
+
+                            }
+                        </div>
+
+                    </div>
+                    <!-- /.tab-content -->
+                </div>
+                <!-- /.nav-tabs-custom -->
+            </div>
+            <!-- /.col -->
         </div>
-    </div>
+        <!-- /.row -->
+    </section>
+    <!-- /.content -->
+</div>
+<!-- /.content-wrapper -->
 
-}
+
 
 @section Styles{
+    <!-- Bootstrap 3.3.7 -->
+    <link rel="stylesheet" href="~/adminlte/components/bootstrap/dist/css/bootstrap.min.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="~/adminlte/components/font-awesome/css/font-awesome.min.css">
+    <!-- Ionicons -->
+    <link rel="stylesheet" href="~/adminlte/components/Ionicons/css/ionicons.min.css">
+    <!-- Theme style -->
+    <link rel="stylesheet" href="~/adminlte/dist/css/AdminLTE.min.css">
+    <!-- AdminLTE Skins. Choose a skin from the css/skins
+         folder instead of downloading all of them to reduce the load. -->
+    <link rel="stylesheet" href="~/adminlte/dist/css/skins/_all-skins.min.css">
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <!-- Google Font -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
     <!--blueimp file upload-->
     <link rel="stylesheet" href="~/lib/jQuery-File-Upload-9.21.0/css/jquery.fileupload.css" />
 }
 
 @section Scripts{
+    <!-- jQuery 3 -->
+    <script src="~/adminlte/components/jquery/dist/jquery.min.js"></script>
+    <!--jqueryUI-->
+    <script src="~/lib/jquery-ui-1.12.1/jquery-ui.min.js"></script>
+    <!-- Bootstrap 3.3.7 -->
+    <script src="~/adminlte/components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- FastClick -->
+    <script src="~/adminlte/components/fastclick/lib/fastclick.js"></script>
+    <!-- AdminLTE App -->
+    <script src="~/adminlte/dist/js/adminlte.min.js"></script>
+    <!-- AdminLTE for demo purposes -->
+    <script src="~/adminlte/dist/js/demo.js"></script>
     <!--blueimp file upload-->
     <script src="~/lib/jQuery-File-Upload-9.21.0/js/jquery.fileupload.js"></script>
     <script>
