--- a/netcore/Views/Manage/_Layout.cshtml
+++ b/netcore/Views/Manage/_Layout.cshtml
@@ -1,27 +1,50 @@
 ﻿@{
-    Layout = "/Views/Shared/_Layout.cshtml";
+    Layout = "/Views/Shared/_AdminlteNetcore.cshtml";
 }
 
-@section Styles {
-    @RenderSection("Styles", required: false)
-}
 
-<h2>Manage your account</h2>
+<!-- Content Wrapper. Contains page content -->
+<div class="content-wrapper">
 
-<div>
-    <h4>Change your account settings</h4>
-    <hr />
-    <div class="row">
-        <div class="col-md-3">
-            @await Html.PartialAsync("_ManageNav")
+    <!-- Main content -->
+    <section class="content">
+        <!-- Default box -->
+        <div class="box">
+            <div class="box-header with-border">
+                <h3 class="box-title">Title</h3>
+                <div class="box-tools pull-right">
+                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip"
+                            title="Collapse">
+                        <i class="fa fa-minus"></i>
+                    </button>
+                    <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                        <i class="fa fa-times"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="box-body">
+                <div class="row">
+                    <div class="col-md-3">
+                        @await Html.PartialAsync("_ManageNav")
+                    </div>
+                    <div class="col-md-9">
+                        @RenderBody()
+                    </div>
+                </div>
+            </div>
+            <!-- /.box-body -->
+            <div class="box-footer">
+                Footer
+            </div>
+            <!-- /.box-footer-->
         </div>
-        <div class="col-md-9">
-            @RenderBody()
-        </div>
-    </div>
+        <!-- /.box -->
+    </section>
+    <!-- /.content -->
 </div>
+<!-- /.content-wrapper -->
 
-@section Scripts {
-    @RenderSection("Scripts", required: false)
-}
 
+@RenderSection("Styles", false)
+
+@RenderSection("Scripts", false)
