--- a/netcore/Views/Shared/_AdminlteNetcore.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcore.cshtml
@@ -22,7 +22,7 @@
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper">
-        @Html.Partial("_AdminlteNetcoreMainHeader")
+        @Html.Partial("_AdminlteNetcoreMainHeader", appUser)
         <!-- Left side column. contains the logo and sidebar -->
         @Html.Partial("_AdminlteNetcoreMainSidebar", appUser)
         <!-- Content Wrapper. Contains page content -->
