--- a/netcore/Views/Shared/_AdminlteNetcoreMainHeader.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreMainHeader.cshtml
@@ -1,4 +1,6 @@
-﻿<header class="main-header">
+﻿@model netcore.Models.ApplicationUser
+
+<header class="main-header">
     <!-- Logo -->
     <a href="@netcore.MVC.Pages.HomeIndex.Url" class="logo">
         <!-- mini logo for sidebar mini 50x50 pixels -->
@@ -14,50 +16,46 @@
         </a>
         <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
-               
-                <!-- User Account: style can be found in dropdown.less -->
-                <li class="dropdown user user-menu">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <img src="~/adminlte/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                        <span class="hidden-xs">Alexander Pierce</span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <!-- User image -->
-                        <li class="user-header">
-                            <img src="~/adminlte/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-                            <p>
-                                Alexander Pierce - Web Developer
-                                <small>Member since Nov. 2012</small>
-                            </p>
-                        </li>
-                        <!-- Menu Body -->
-                        <li class="user-body">
-                            <div class="row">
-                                <div class="col-xs-4 text-center">
-                                    <a href="#">Followers</a>
+
+                @if (Model != null)
+                {
+                    <!-- User Account: style can be found in dropdown.less -->
+                    <li class="dropdown user user-menu">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <img src="@Model.profilePictureUrl" class="user-image" alt="User Image">
+                            <span class="hidden-xs">@Model.Email</span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <!-- User image -->
+                            <li class="user-header">
+                                <img src="@Model.profilePictureUrl" class="img-circle" alt="User Image">
+                                <p>
+                                    @Model.Email
+                                </p>
+                            </li>
+
+                            <!-- Menu Footer-->
+
+                            <li class="user-footer">
+
+                                <div class="pull-left">
+                                    <a href="@Url.Action("ChangePassword", "Manage")" class="btn btn-default btn-flat">Change Password</a>
                                 </div>
-                                <div class="col-xs-4 text-center">
-                                    <a href="#">Sales</a>
-                                </div>
-                                <div class="col-xs-4 text-center">
-                                    <a href="#">Friends</a>
-                                </div>
-                            </div>
-                            <!-- /.row -->
-                        </li>
-                        <!-- Menu Footer-->
-                        <li class="user-footer">
-                            <div class="pull-left">
-                                <a href="#" class="btn btn-default btn-flat">Profile</a>
-                            </div>
-                            <div class="pull-right">
-                                <a href="#" class="btn btn-default btn-flat">Sign out</a>
-                            </div>
-                        </li>
-                    </ul>
-                </li>
-                
-               
+                                <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm">
+                                    <div class="pull-right">
+                                        <button type="submit" class="btn btn-default btn-flat">Sign out</button>
+                                    </div>
+                                </form>
+
+                            </li>
+                        </ul>
+                    </li>
+
+                }
+
+
+
+
             </ul>
         </div>
     </nav>
