--- a/netcore/Views/Shared/_AdminlteNetcoreMainSidebar.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreMainSidebar.cshtml
@@ -54,9 +54,9 @@
                 }
                 if (Model.isInRoleApplicationUser)
                 {
-                    <li class="@Html.IsSelected(controller: "ApplicationUser", action: "Index")">
+                    <li class="@Html.IsSelected(controller: "ApplicationUser")">
                         <a href="@netcore.MVC.Pages.ApplicationUser.Url">
-                            <i class="fa fa-circle-o"></i> <span>Application User</span>
+                            <i class="fa fa-circle-o"></i> <span>Edit Roles</span>
                         </a>
                     </li>
 
