--- a/netcore/Views/ApplicationUser/Edit.cshtml
+++ b/netcore/Views/ApplicationUser/Edit.cshtml
@@ -9,40 +9,28 @@
 
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-        <h1>
-            Blank page
-            <small>it all starts here</small>
-        </h1>
-        <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li><a href="#">Examples</a></li>
-            <li class="active">Blank page</li>
-        </ol>
-    </section>
-    <!-- Main content -->
-    <section class="content">
-        <!-- Default box -->
-        <div class="box">
-            <div class="box-header with-border">
-                <h3 class="box-title">Title</h3>
-                <div class="box-tools pull-right">
-                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip"
-                            title="Collapse">
-                        <i class="fa fa-minus"></i>
-                    </button>
-                    <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
-                        <i class="fa fa-times"></i>
-                    </button>
+    <form asp-action="Edit">
+        <section class="content">
+            <!-- Default box -->
+            <div class="box">
+                <div class="box-header with-border">
+                    <h3 class="box-title">Edit Roles</h3>
+                    <div class="box-tools pull-right">
+                        <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip"
+                                title="Collapse">
+                            <i class="fa fa-minus"></i>
+                        </button>
+                        <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                            <i class="fa fa-times"></i>
+                        </button>
+                    </div>
                 </div>
-            </div>
-            <div class="box-body">
-                <div class="row">
-                    <div class="col-md-12">
-                        <form asp-action="Edit">
+                <div class="box-body">
+                    <div class="row">
+                        <div class="col-md-12">
+
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                            <div class="form-group">
+                            <div class="form-group hidden">
                                 <div class="checkbox">
                                     <label>
                                         <input asp-for="isSuperAdmin" /> @Html.DisplayNameFor(model => model.isSuperAdmin)
@@ -78,103 +66,107 @@
                                 </div>
                             </div>
                             <input type="hidden" asp-for="Id" />
-                            <div class="form-group">
+                            <div class="form-group hidden">
                                 <label asp-for="UserName" class="control-label"></label>
                                 <input asp-for="UserName" class="form-control" />
                                 <span asp-validation-for="UserName" class="text-danger"></span>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group hidden">
                                 <label asp-for="NormalizedUserName" class="control-label"></label>
                                 <input asp-for="NormalizedUserName" class="form-control" />
                                 <span asp-validation-for="NormalizedUserName" class="text-danger"></span>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group hidden">
                                 <label asp-for="Email" class="control-label"></label>
                                 <input asp-for="Email" class="form-control" />
                                 <span asp-validation-for="Email" class="text-danger"></span>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group hidden">
                                 <label asp-for="NormalizedEmail" class="control-label"></label>
                                 <input asp-for="NormalizedEmail" class="form-control" />
                                 <span asp-validation-for="NormalizedEmail" class="text-danger"></span>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group hidden">
                                 <div class="checkbox">
                                     <label>
                                         <input asp-for="EmailConfirmed" /> @Html.DisplayNameFor(model => model.EmailConfirmed)
                                     </label>
                                 </div>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group hidden">
                                 <label asp-for="PasswordHash" class="control-label"></label>
                                 <input asp-for="PasswordHash" class="form-control" />
                                 <span asp-validation-for="PasswordHash" class="text-danger"></span>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group hidden">
                                 <label asp-for="SecurityStamp" class="control-label"></label>
                                 <input asp-for="SecurityStamp" class="form-control" />
                                 <span asp-validation-for="SecurityStamp" class="text-danger"></span>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group hidden">
                                 <label asp-for="ConcurrencyStamp" class="control-label"></label>
                                 <input asp-for="ConcurrencyStamp" class="form-control" />
                                 <span asp-validation-for="ConcurrencyStamp" class="text-danger"></span>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group hidden">
                                 <label asp-for="PhoneNumber" class="control-label"></label>
                                 <input asp-for="PhoneNumber" class="form-control" />
                                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group hidden">
                                 <div class="checkbox">
                                     <label>
                                         <input asp-for="PhoneNumberConfirmed" /> @Html.DisplayNameFor(model => model.PhoneNumberConfirmed)
                                     </label>
                                 </div>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group hidden">
                                 <div class="checkbox">
                                     <label>
                                         <input asp-for="TwoFactorEnabled" /> @Html.DisplayNameFor(model => model.TwoFactorEnabled)
                                     </label>
                                 </div>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group hidden">
                                 <label asp-for="LockoutEnd" class="control-label"></label>
                                 <input asp-for="LockoutEnd" class="form-control" />
                                 <span asp-validation-for="LockoutEnd" class="text-danger"></span>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group hidden">
                                 <div class="checkbox">
                                     <label>
                                         <input asp-for="LockoutEnabled" /> @Html.DisplayNameFor(model => model.LockoutEnabled)
                                     </label>
                                 </div>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group hidden">
                                 <label asp-for="AccessFailedCount" class="control-label"></label>
                                 <input asp-for="AccessFailedCount" class="form-control" />
                                 <span asp-validation-for="AccessFailedCount" class="text-danger"></span>
                             </div>
-                            <div class="form-group">
-                                <input type="submit" value="Save" class="btn btn-default" />
+                            <div class="form-group hidden">
+                                <label asp-for="profilePictureUrl" class="control-label"></label>
+                                <input asp-for="profilePictureUrl" class="form-control" />
+                                <span asp-validation-for="profilePictureUrl" class="text-danger"></span>
                             </div>
-                        </form>
+
+                        </div>
+                    </div>
+
+                </div>
+                <!-- /.box-body -->
+                <div class="box-footer">
+                    <div class="form-group">
+                        <input type="submit" value="Save" class="btn btn-primary" />
+                        <a asp-action="Index" class="btn btn-default">Back to List</a>
                     </div>
                 </div>
-
-                <div>
-                    <a asp-action="Index">Back to List</a>
-                </div>
+                <!-- /.box-footer-->
             </div>
-            <!-- /.box-body -->
-            <div class="box-footer">
-                Footer
-            </div>
-            <!-- /.box-footer-->
-        </div>
-        <!-- /.box -->
-    </section>
+            <!-- /.box -->
+        </section>
+    </form>
+    <!-- Main content -->
     <!-- /.content -->
 </div>
 <!-- /.content-wrapper -->
@@ -187,6 +179,8 @@
     <link rel="stylesheet" href="~/adminlte/components/font-awesome/css/font-awesome.min.css">
     <!-- Ionicons -->
     <link rel="stylesheet" href="~/adminlte/components/Ionicons/css/ionicons.min.css">
+    <!-- iCheck -->
+    <link rel="stylesheet" href="~/adminlte/plugins/iCheck/square/blue.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="~/adminlte/dist/css/AdminLTE.min.css">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
@@ -212,11 +206,22 @@
     <script src="~/adminlte/components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
     <!-- FastClick -->
     <script src="~/adminlte/components/fastclick/lib/fastclick.js"></script>
+    <!-- iCheck -->
+    <script src="~/adminlte/plugins/iCheck/icheck.min.js"></script>
     <!-- AdminLTE App -->
     <script src="~/adminlte/dist/js/adminlte.min.js"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="~/adminlte/dist/js/demo.js"></script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script>
+        $(function () {
+            $('input').iCheck({
+                checkboxClass: 'icheckbox_square-blue',
+                radioClass: 'iradio_square-blue',
+                increaseArea: '20%' /* optional */
+            });
+        });
+    </script>
 }
 
 
