--- a/netcore/Views/ApplicationUser/Index.cshtml
+++ b/netcore/Views/ApplicationUser/Index.cshtml
@@ -16,7 +16,7 @@
         <!-- Default box -->
         <div class="box">
             <div class="box-header with-border">
-                <h3 class="box-title">Title</h3>
+                <h3 class="box-title">Roles</h3>
                 <div class="box-tools pull-right">
                     <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip"
                             title="Collapse">
@@ -28,16 +28,11 @@
                 </div>
             </div>
             <div class="box-body">
-                <p>
-                    <a asp-action="Create">Create New</a>
-                </p>
+
                 <table class="table">
                     <thead>
                         <tr>
                             <th></th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.isSuperAdmin)
-                            </th>
                             <th>
                                 @Html.DisplayNameFor(model => model.isInRoleHomeIndex)
                             </th>
@@ -53,125 +48,40 @@
                             <th>
                                 @Html.DisplayNameFor(model => model.UserName)
                             </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.NormalizedUserName)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Email)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.NormalizedEmail)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.EmailConfirmed)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.PasswordHash)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.SecurityStamp)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.ConcurrencyStamp)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.PhoneNumber)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.PhoneNumberConfirmed)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.TwoFactorEnabled)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.LockoutEnd)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.LockoutEnabled)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.AccessFailedCount)
-                            </th>
+
 
                         </tr>
                     </thead>
                     <tbody>
                         @foreach (var item in Model)
                         {
-                        <tr>
-                            <td>
-                                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.isSuperAdmin)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.isInRoleHomeIndex)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.isInRoleHomeAbout)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.isInRoleHomeContact)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.isInRoleApplicationUser)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.UserName)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.NormalizedUserName)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Email)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.NormalizedEmail)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.EmailConfirmed)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.PasswordHash)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.SecurityStamp)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.ConcurrencyStamp)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.PhoneNumber)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.PhoneNumberConfirmed)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TwoFactorEnabled)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.LockoutEnd)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.LockoutEnabled)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.AccessFailedCount)
-                            </td>
+                            <tr>
+                                <td>
+                                    <a asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil"></i></a>
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.isInRoleHomeIndex)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.isInRoleHomeAbout)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.isInRoleHomeContact)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.isInRoleApplicationUser)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.UserName)
+                                </td>
 
-                        </tr>
+
+                            </tr>
                         }
                     </tbody>
                 </table>
             </div>
             <!-- /.box-body -->
-            <div class="box-footer">
-                Footer
-            </div>
-            <!-- /.box-footer-->
         </div>
         <!-- /.box -->
     </section>
