separating roles into its own services

--- a/netcore/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/netcore/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Forgot password confirmation";
-    Layout = "_AdminlteBlank";
+    Layout = "_AdminlteNetcoreBlank";
 }
 
 
