--- a/netcore/Views/Account/Login.cshtml
+++ b/netcore/Views/Account/Login.cshtml
@@ -7,7 +7,7 @@
 
 @{
     ViewData["Title"] = "Log in";
-    Layout = "_AdminlteLogin";
+    Layout = "_AdminlteNetcoreLogin";
 }
 
 <div class="login-box">
