--- a/netcore/Views/Account/Register.cshtml
+++ b/netcore/Views/Account/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@model RegisterViewModel
 @{
     ViewData["Title"] = "Register";
-    Layout = "_AdminlteRegister";
+    Layout = "_AdminlteNetcoreRegister";
 }
 
 <div class="register-box">
