--- a/netcore/Views/Account/ResetPassword.cshtml
+++ b/netcore/Views/Account/ResetPassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ResetPasswordViewModel
 @{
     ViewData["Title"] = "Reset password";
-    Layout = "_AdminlteRegister";
+    Layout = "_AdminlteNetcoreRegister";
 }
 
 <div class="register-box">
