--- a/netcore/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/netcore/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Reset password confirmation";
-    Layout = "_AdminlteBlank";
+    Layout = "_AdminlteNetcoreBlank";
 }
 
 <div class="text-center">
