--- a/netcore/Views/Account/SignedOut.cshtml
+++ b/netcore/Views/Account/SignedOut.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Signed out";
-    Layout = "_AdminlteBlank";
+    Layout = "_AdminlteNetcoreBlank";
 }
 
 <div class="text-center">
