--- a/netcore/Views/Account/ConfirmEmailNotification.cshtml
+++ b/netcore/Views/Account/ConfirmEmailNotification.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Confirm email notification";
-    Layout = "_AdminlteBlank";
+    Layout = "_AdminlteNetcoreBlank";
 }
 
 
