--- a/netcore/Views/Account/ForgotPassword.cshtml
+++ b/netcore/Views/Account/ForgotPassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ForgotPasswordViewModel
 @{
     ViewData["Title"] = "Forgot your password?";
-    Layout = "_AdminlteRegister";
+    Layout = "_AdminlteNetcoreRegister";
 }
 
 <div class="register-box">
