layouts for every CRUD

--- a/netcore/Views/Adminlte/Index.cshtml
+++ b/netcore/Views/Adminlte/Index.cshtml
@@ -345,7 +345,7 @@
     <!-- AdminLTE for demo purposes -->
     <script src="~/adminlte/dist/js/demo.js"></script>
     <!-- iCheck -->
-    <script src="../../plugins/iCheck/icheck.min.js"></script>
+    <script src="~/adminlte/plugins/iCheck/icheck.min.js"></script>
     <!-- Page Script -->
     <script>
 $(function () {
