auto master detail templating

--- a/netcore/Views/Shared/_AdminlteNetcoreBasicScripts.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreBasicScripts.cshtml
@@ -13,6 +13,10 @@
 <!-- DataTables -->
 <script src="~/adminlte/components/datatables.net/js/jquery.dataTables.min.js"></script>
 <script src="~/adminlte/components/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
+<!-- Toastr -->
+<script src="~/lib/toastr/toastr.min.js"></script>
+<!-- Sweetalert -->
+<script src="~/lib/sweetalert/sweetalert.min.js"></script>
 <!-- AdminLTE App -->
 <script src="~/adminlte/dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
