--- a/netcore/Views/Shared/_AdminlteNetcoreBasicStyles.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreBasicStyles.cshtml
@@ -13,6 +13,10 @@
 <link rel="stylesheet" href="~/adminlte/dist/css/skins/_all-skins.min.css">
 <!-- Pace style -->
 <link rel="stylesheet" href="~/adminlte/plugins/pace/pace.min.css">
+<!-- Toastr -->
+<link rel="stylesheet" href="~/lib/toastr/toastr.min.css" />
+<!-- Sweetalert -->
+<link rel="stylesheet" href="~/lib/sweetalert/sweetalert.css" />
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
