--- a/netcore/Views/TodoLine/Create.cshtml
+++ b/netcore/Views/TodoLine/Create.cshtml
@@ -1,19 +1,18 @@
-﻿@model netcore.Models.Todo
+﻿@model netcore.Models.TodoLine
 
 @{
-    ViewData["Title"] = "Edit";
-    Layout = "~/Views/Shared/_AdminlteNetcoreEdit.cshtml";
+    ViewData["Title"] = "Create";
+    Layout = "~/Views/Shared/_AdminlteNetcoreCreate.cshtml";
 }
 
 
 <div class="row">
     <div class="col-md-12">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="todoId" />
             <div class="form-group">
-                <label asp-for="todoName" class="control-label"></label>
-                <input asp-for="todoName" class="form-control" />
-                <span asp-validation-for="todoName" class="text-danger"></span>
+                <label asp-for="todoLineName" class="control-label"></label>
+                <input asp-for="todoLineName" class="form-control" />
+                <span asp-validation-for="todoLineName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="description" class="control-label"></label>
@@ -21,16 +20,16 @@
                 <span asp-validation-for="description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="HasChild" class="control-label"></label>
-                <input asp-for="HasChild" class="form-control" />
-                <span asp-validation-for="HasChild" class="text-danger"></span>
+                <label asp-for="todoId" class="control-label"></label>
+                <select asp-for="todoId" class ="form-control" asp-items="ViewBag.todoId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="createdAt" class="control-label"></label>
                 <input asp-for="createdAt" class="form-control" />
                 <span asp-validation-for="createdAt" class="text-danger"></span>
             </div>
-            
+           
+        
     </div>
 </div>
 
