--- a/netcore/Views/TodoLine/Delete.cshtml
+++ b/netcore/Views/TodoLine/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model netcore.Models.Todo
+﻿@model netcore.Models.TodoLine
 
 @{
     ViewData["Title"] = "Delete";
@@ -11,10 +11,10 @@
     
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.todoName)
+            @Html.DisplayNameFor(model => model.todoLineName)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.todoName)
+            @Html.DisplayFor(model => model.todoLineName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.description)
@@ -23,16 +23,16 @@
             @Html.DisplayFor(model => model.description)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.HasChild)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.HasChild)
-        </dd>
-        <dt>
             @Html.DisplayNameFor(model => model.createdAt)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.createdAt)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.todo)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.todo.todoId)
         </dd>
     </dl>
     
