--- a/netcore/Views/TodoLine/Edit.cshtml
+++ b/netcore/Views/TodoLine/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model netcore.Models.Todo
+﻿@model netcore.Models.TodoLine
 
 @{
     ViewData["Title"] = "Edit";
@@ -9,11 +9,11 @@
 <div class="row">
     <div class="col-md-12">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="todoId" />
+            <input type="hidden" asp-for="todoLineId" />
             <div class="form-group">
-                <label asp-for="todoName" class="control-label"></label>
-                <input asp-for="todoName" class="form-control" />
-                <span asp-validation-for="todoName" class="text-danger"></span>
+                <label asp-for="todoLineName" class="control-label"></label>
+                <input asp-for="todoLineName" class="form-control" />
+                <span asp-validation-for="todoLineName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="description" class="control-label"></label>
@@ -21,9 +21,9 @@
                 <span asp-validation-for="description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="HasChild" class="control-label"></label>
-                <input asp-for="HasChild" class="form-control" />
-                <span asp-validation-for="HasChild" class="text-danger"></span>
+                <label asp-for="todoId" class="control-label"></label>
+                <select asp-for="todoId" class="form-control" asp-items="ViewBag.todoId"></select>
+                <span asp-validation-for="todoId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="createdAt" class="control-label"></label>
