--- a/netcore/Views/TodoLine/Index.cshtml
+++ b/netcore/Views/TodoLine/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<netcore.Models.Todo>
+﻿@model IEnumerable<netcore.Models.TodoLine>
 
 @{
     ViewData["Title"] = "Index";
@@ -10,17 +10,17 @@
     <thead>
         <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.todoName)
+                    @Html.DisplayNameFor(model => model.todoLineName)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.description)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.HasChild)
-                </th>
-                <th>
                     @Html.DisplayNameFor(model => model.createdAt)
                 </th>
+            <th>
+                @Html.DisplayNameFor(model => model.todo)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -28,21 +28,21 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.todoName)
+                @Html.DisplayFor(modelItem => item.todoLineName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.HasChild)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.createdAt)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.todoId"><i class="fa fa-pencil"></i></a> |
-                <a asp-action="Details" asp-route-id="@item.todoId"><i class="fa fa-list"></i></a> |
-                <a asp-action="Delete" asp-route-id="@item.todoId"><i class="fa fa-trash"></i></a>
+                @Html.DisplayFor(modelItem => item.todo.todoId)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.todoLineId"><i class="fa fa-pencil"></i></a> |
+                <a asp-action="Details" asp-route-id="@item.todoLineId"><i class="fa fa-list"></i></a> |
+                <a asp-action="Delete" asp-route-id="@item.todoLineId"><i class="fa fa-trash"></i></a>
             </td>
         </tr>
 }
