--- a/netcore/Templates/ControllerGenerator/MvcControllerWithContext.cshtml
+++ b/netcore/Templates/ControllerGenerator/MvcControllerWithContext.cshtml
@@ -65,6 +65,8 @@ namespace @Model.ControllerNamespace
     @:@string.Format("[Area(\"{0}\")]", Model.AreaName)
     }
 }
+
+
     public class @Model.ControllerName : Controller
     {
         private readonly @Model.ContextTypeName _context;
@@ -78,199 +80,254 @@ namespace @Model.ControllerNamespace
 @{
         @:public async Task<IActionResult> Index()
         @:{
-    var includeExpressions = "";
-    includeExpressions = String.Join("", relatedProperties
-        .Values
-        .Select(property => String.Format(".Include({0} => {0}.{1})", lambdaVar, property.AssociationPropertyName)));
-    if (!String.IsNullOrEmpty(includeExpressions))
-    {
-            @:var @entitySetVar = _context.@entitySetName@includeExpressions;
-            @:return View(await @(entitySetVar).ToListAsync());
-    }
-    else
-    {
-            @:return View(await _context.@(entitySetName).ToListAsync());
-    }
-}        }
+            var includeExpressions = "";
+            includeExpressions = String.Join("", relatedProperties
+                .Values
+                .Select(property => String.Format(".Include({0} => {0}.{1})", lambdaVar, property.AssociationPropertyName)));
+            if (!String.IsNullOrEmpty(includeExpressions))
+            {
+                    @:var @entitySetVar = _context.@entitySetName@includeExpressions;
+                    @:return View(await @(entitySetVar).ToListAsync());
+            }
+            else
+            {
+                    @:return View(await _context.@(entitySetName).ToListAsync());
+            }
+        }        
+    
+}
 
         // GET: @routePrefix/Details/5
-        public async Task<IActionResult> Details(@primaryKeyNullableTypeName id)
-        {
-            if (id == null)
-            {
-                return NotFound();
-            }
-
-            var @Model.ModelVariable = await _context.@(entitySetName)@inlineIncludes
-                .SingleOrDefaultAsync(m => m.@primaryKeyName == id);
-            if (@Model.ModelVariable == null)
-            {
-                return NotFound();
-            }
-
-            return View(@Model.ModelVariable);
-        }
-
-        // GET: @routePrefix/Create
-        public IActionResult Create()
-        {
-@{
-    foreach (var property in relatedProperties.Values)
+        public async Task<IActionResult>
+    Details(@primaryKeyNullableTypeName id)
     {
-            @:ViewData["@(property.ForeignKeyPropertyNames[0])"] = new SelectList(_context.@property.EntitySetName, "@property.PrimaryKeyNames[0]", "@property.DisplayPropertyName");
+    if (id == null)
+    {
+    return NotFound();
     }
-}            return View();
-        }
 
-        // POST: @routePrefix/Create
-        // To protect from overposting attacks, please enable the specific properties you want to bind to, for 
-        // more details see http://go.microsoft.com/fwlink/?LinkId=317598.
-        [HttpPost]
-        [ValidateAntiForgeryToken]
-        public async Task<IActionResult> Create([Bind("@bindString")] @Model.ModelTypeName @Model.ModelVariable)
-        {
-            if (ModelState.IsValid)
-            {
-@{
-    if (!string.IsNullOrEmpty(primaryKeyType) && IsGuid(primaryKeyType))
+    var @Model.ModelVariable = await _context.@(entitySetName)@inlineIncludes
+    .SingleOrDefaultAsync(m => m.@primaryKeyName == id);
+    if (@Model.ModelVariable == null)
     {
+    return NotFound();
+    }
+
+    return View(@Model.ModelVariable);
+    }
+
+
+    @{
+        var entity = Model.ModelMetadata.EntitySetName;
+        var pk = Model.ModelMetadata.PrimaryKeys[0].PropertyName;
+        string name = routePrefix;
+        string masterEntity = name.Replace("Line", "");
+        string masterFK = Char.ToLowerInvariant(masterEntity[0]) + masterEntity.Substring(1);
+        string masterFKId = masterFK + "Id";
+        if (name.Contains("Line"))
+        {
+            @:// GET: @routePrefix/Create
+            @:public IActionResult Create(string masterid, string id)
+            @:{
+                @:var check = _context.@(entitySetName).SingleOrDefault(m => m.@primaryKeyName == id);
+                @:var selected = _context.@(masterEntity).SingleOrDefault(m => m.@masterFKId == masterid);
+                foreach (var property in relatedProperties.Values)
+                {
+                    @:ViewData["@(property.ForeignKeyPropertyNames[0])"] = new SelectList(_context.@property.EntitySetName, "@property.PrimaryKeyNames[0]", "@property.DisplayPropertyName");
+                }
+                @:if (check == null)
+                @:{
+                    @:@(entitySetName) objline = new @(entitySetName)();
+                    @:objline.@masterFK = selected;
+                    @:objline.@masterFKId = masterid;
+                    @:return View(objline);
+                @:}
+                @:else
+                @:{
+                    @:return View(check);
+                @:}
+            @:}
+
+        }
+        else
+        {
+
+            @:// GET: @routePrefix/Create
+            @:public IActionResult Create()
+            @:{
+            foreach (var property in relatedProperties.Values)
+            {
+                @:ViewData["@(property.ForeignKeyPropertyNames[0])"] = new SelectList(_context.@property.EntitySetName, "@property.PrimaryKeyNames[0]", "@property.DisplayPropertyName");
+            }
+            @:return View();
+            @:}
+        }
+    }
+
+
+
+
+    // POST: @routePrefix/Create
+    // To protect from overposting attacks, please enable the specific properties you want to bind to, for
+    // more details see http://go.microsoft.com/fwlink/?LinkId=317598.
+    [HttpPost]
+    [ValidateAntiForgeryToken]
+    public async Task<IActionResult>
+        Create([Bind("@bindString")] @Model.ModelTypeName @Model.ModelVariable)
+        {
+        if (ModelState.IsValid)
+        {
+        @{
+            if (!string.IsNullOrEmpty(primaryKeyType) && IsGuid(primaryKeyType))
+            {
                 @:@(Model.ModelVariable).@primaryKeyName = Guid.NewGuid();
-    }
-                @:_context.Add(@Model.ModelVariable);
-                @:await _context.SaveChangesAsync();
-}                return RedirectToAction(nameof(Index));
             }
-@{
-    foreach (var property in relatedProperties.Values)
-    {
-            @:ViewData["@(property.ForeignKeyPropertyNames[0])"] = new SelectList(_context.@property.EntitySetName, "@property.PrimaryKeyNames[0]", "@property.DisplayPropertyName", @(Model.ModelVariable).@property.ForeignKeyPropertyNames[0]);
-    }
-}
-            return View(@Model.ModelVariable);
+            @:_context.Add(@Model.ModelVariable);
+            @:await _context.SaveChangesAsync();
+        }                return RedirectToAction(nameof(Index));
+        }
+        @{
+            foreach (var property in relatedProperties.Values)
+            {
+                @:ViewData["@(property.ForeignKeyPropertyNames[0])"] = new SelectList(_context.@property.EntitySetName, "@property.PrimaryKeyNames[0]", "@property.DisplayPropertyName", @(Model.ModelVariable).@property.ForeignKeyPropertyNames[0]);
+            }
+        }
+        return View(@Model.ModelVariable);
         }
 
         // GET: @routePrefix/Edit/5
-        public async Task<IActionResult> Edit(@primaryKeyNullableTypeName id)
-        {
+        public async Task<IActionResult>
+            Edit(@primaryKeyNullableTypeName id)
+            {
             if (id == null)
             {
-                return NotFound();
+            return NotFound();
             }
 
             var @Model.ModelVariable = await _context.@(entitySetName).SingleOrDefaultAsync(m => m.@primaryKeyName == id);
             if (@Model.ModelVariable == null)
             {
-                return NotFound();
+            return NotFound();
             }
-@{
-    foreach (var property in relatedProperties.Values)
-    {
-            @:ViewData["@(property.ForeignKeyPropertyNames[0])"] = new SelectList(_context.@property.EntitySetName, "@property.PrimaryKeyNames[0]", "@property.DisplayPropertyName", @(Model.ModelVariable).@property.ForeignKeyPropertyNames[0]);
-    }
-}
+            @{
+                foreach (var property in relatedProperties.Values)
+                {
+                    @:ViewData["@(property.ForeignKeyPropertyNames[0])"] = new SelectList(_context.@property.EntitySetName, "@property.PrimaryKeyNames[0]", "@property.DisplayPropertyName", @(Model.ModelVariable).@property.ForeignKeyPropertyNames[0]);
+                }
+            }
             return View(@Model.ModelVariable);
-        }
-
-        // POST: @routePrefix/Edit/5
-        // To protect from overposting attacks, please enable the specific properties you want to bind to, for 
-        // more details see http://go.microsoft.com/fwlink/?LinkId=317598.
-        [HttpPost]
-        [ValidateAntiForgeryToken]
-        public async Task<IActionResult> Edit(@primaryKeyShortTypeName id, [Bind("@bindString")] @Model.ModelTypeName @Model.ModelVariable)
-        {
-            if (id != @Model.ModelVariable.@primaryKeyName)
-            {
-                return NotFound();
             }
 
-            if (ModelState.IsValid)
-            {
+            // POST: @routePrefix/Edit/5
+            // To protect from overposting attacks, please enable the specific properties you want to bind to, for
+            // more details see http://go.microsoft.com/fwlink/?LinkId=317598.
+            [HttpPost]
+            [ValidateAntiForgeryToken]
+            public async Task<IActionResult>
+                Edit(@primaryKeyShortTypeName id, [Bind("@bindString")] @Model.ModelTypeName @Model.ModelVariable)
+                {
+                if (id != @Model.ModelVariable.@primaryKeyName)
+                {
+                return NotFound();
+                }
+
+                if (ModelState.IsValid)
+                {
                 try
                 {
-                    _context.Update(@Model.ModelVariable);
-                    await _context.SaveChangesAsync();
+                _context.Update(@Model.ModelVariable);
+                await _context.SaveChangesAsync();
                 }
                 catch (DbUpdateConcurrencyException)
                 {
-                    if (!@(Model.ModelTypeName)Exists(@Model.ModelVariable.@primaryKeyName))
-                    {
-                        return NotFound();
-                    }
-                    else
-                    {
-                        throw;
-                    }
+                if (!@(Model.ModelTypeName)Exists(@Model.ModelVariable.@primaryKeyName))
+                {
+                return NotFound();
+                }
+                else
+                {
+                throw;
+                }
                 }
                 return RedirectToAction(nameof(Index));
-            }
-@{
-    foreach (var property in relatedProperties.Values)
-    {
-            @:ViewData["@(property.ForeignKeyPropertyNames[0])"] = new SelectList(_context.@property.EntitySetName, "@property.PrimaryKeyNames[0]", "@property.DisplayPropertyName", @(Model.ModelVariable).@property.ForeignKeyPropertyNames[0]);
-    }
-}
-            return View(@Model.ModelVariable);
-        }
+                }
+                @{
+                    foreach (var property in relatedProperties.Values)
+                    {
+                        @:ViewData["@(property.ForeignKeyPropertyNames[0])"] = new SelectList(_context.@property.EntitySetName, "@property.PrimaryKeyNames[0]", "@property.DisplayPropertyName", @(Model.ModelVariable).@property.ForeignKeyPropertyNames[0]);
+                    }
+                }
+                return View(@Model.ModelVariable);
+                }
 
-        // GET: @routePrefix/Delete/5
-        public async Task<IActionResult> Delete(@primaryKeyNullableTypeName id)
-        {
-            if (id == null)
-            {
-                return NotFound();
-            }
+                // GET: @routePrefix/Delete/5
+                public async Task<IActionResult>
+                    Delete(@primaryKeyNullableTypeName id)
+                    {
+                    if (id == null)
+                    {
+                    return NotFound();
+                    }
 
-            var @Model.ModelVariable = await _context.@(entitySetName)@inlineIncludes
-                .SingleOrDefaultAsync(m => m.@primaryKeyName == id);
-            if (@Model.ModelVariable == null)
-            {
-                return NotFound();
-            }
+                    var @Model.ModelVariable = await _context.@(entitySetName)@inlineIncludes
+                    .SingleOrDefaultAsync(m => m.@primaryKeyName == id);
+                    if (@Model.ModelVariable == null)
+                    {
+                    return NotFound();
+                    }
 
-            return View(@Model.ModelVariable);
-        }
+                    return View(@Model.ModelVariable);
+                    }
 
-        // POST: @routePrefix/Delete/5
-        [HttpPost, ActionName("Delete")]
-        [ValidateAntiForgeryToken]
-        public async Task<IActionResult> DeleteConfirmed(@primaryKeyShortTypeName id)
-        {
-            var @Model.ModelVariable = await _context.@(entitySetName).SingleOrDefaultAsync(m => m.@primaryKeyName == id);
-            _context.@(entitySetName).Remove(@Model.ModelVariable);
-            await _context.SaveChangesAsync();
-            return RedirectToAction(nameof(Index));
-        }
 
-        private bool @(Model.ModelTypeName)Exists(@primaryKeyShortTypeName id)
-        {
-            return _context.@(entitySetName).Any(e => e.@primaryKeyName == id);
-        }
-    }
-}
-@functions
-{
-    // This function converts the primary key short type name to its nullable equivalent when possible. This is required to make
-    // sure that an HTTP 400 error is thrown when the user tries to access the edit, delete, or details action with null values.
-    string GetNullableTypeName(string typeName, string shortTypeName)
-    {
-        // The exceptions are caught because if for any reason the type is user defined, then the short type name will be used.
-        // In that case the user will receive a server error if null is passed to the edit, delete, or details actions.
-        Type primaryKeyType = null;
-        try
-        {
-            primaryKeyType = Type.GetType(typeName);
-        }
-        catch
-        {
-        }
-        if (primaryKeyType != null && (!Microsoft.VisualStudio.Web.CodeGeneration.Templating.TypeUtilities.IsNullable(primaryKeyType) || IsGuid(typeName)))
-        {
-            return shortTypeName + "?";
-        }
-        return shortTypeName;
-    }
 
-    bool IsGuid(string typeName) {
-        return String.Equals("System.Guid", typeName, StringComparison.OrdinalIgnoreCase);
-    }
-}
+
+                    // POST: @routePrefix/Delete/5
+                    [HttpPost, ActionName("Delete")]
+                    [ValidateAntiForgeryToken]
+                    public async Task<IActionResult>
+                        DeleteConfirmed(@primaryKeyShortTypeName id)
+                        {
+                        var @Model.ModelVariable = await _context.@(entitySetName).SingleOrDefaultAsync(m => m.@primaryKeyName == id);
+                        _context.@(entitySetName).Remove(@Model.ModelVariable);
+                        await _context.SaveChangesAsync();
+                        return RedirectToAction(nameof(Index));
+                        }
+
+                        private bool @(Model.ModelTypeName)Exists(@primaryKeyShortTypeName id)
+                        {
+                        return _context.@(entitySetName).Any(e => e.@primaryKeyName == id);
+                        }
+
+                        }
+                        }
+
+
+                        @functions
+                        {
+                        // This function converts the primary key short type name to its nullable equivalent when possible. This is required to make
+                        // sure that an HTTP 400 error is thrown when the user tries to access the edit, delete, or details action with null values.
+                        string GetNullableTypeName(string typeName, string shortTypeName)
+                        {
+                            // The exceptions are caught because if for any reason the type is user defined, then the short type name will be used.
+                            // In that case the user will receive a server error if null is passed to the edit, delete, or details actions.
+                            Type primaryKeyType = null;
+                            try
+                            {
+                                primaryKeyType = Type.GetType(typeName);
+                            }
+                            catch
+                            {
+                            }
+                            if (primaryKeyType != null && (!Microsoft.VisualStudio.Web.CodeGeneration.Templating.TypeUtilities.IsNullable(primaryKeyType) || IsGuid(typeName)))
+                            {
+                                return shortTypeName + "?";
+                            }
+                            return shortTypeName;
+                        }
+
+                        bool IsGuid(string typeName)
+                        {
+                            return String.Equals("System.Guid", typeName, StringComparison.OrdinalIgnoreCase);
+                        }
+                        }
