--- a/netcore/Templates/ViewGenerator/Create.cshtml
+++ b/netcore/Templates/ViewGenerator/Create.cshtml
@@ -5,6 +5,8 @@
 @@model @Model.ViewDataTypeName
 
 @{
+    string entitySetName = Model.ModelMetadata.EntitySetName;
+
     if (Model.IsPartialView)
     {
     }
@@ -12,7 +14,15 @@
     {
 @:@@{
     @:ViewData["Title"] = "@Model.ViewName";
+    if (entitySetName.Contains("Line"))
+    {
+    @:Layout = "~/Views/Shared/_AdminlteNetcorePopup.cshtml";
+    } else
+    {
     @:Layout = "~/Views/Shared/_AdminlteNetcoreCreate.cshtml";
+
+    }
+    
         if (!string.IsNullOrEmpty(Model.LayoutPageFile))
         {
     @:Layout = "@Model.LayoutPageFile";
