--- a/netcore/Templates/ViewGenerator/Details.cshtml
+++ b/netcore/Templates/ViewGenerator/Details.cshtml
@@ -66,7 +66,7 @@
 
     foreach (var property in Model.ModelMetadata.Properties)
     {
-        if (property.Scaffold && !property.IsPrimaryKey && !property.IsForeignKey)
+        if (property.Scaffold && !property.IsPrimaryKey && !property.IsForeignKey && !property.PropertyName.Equals("HasChild"))
         {
                           <dt>
                               @@Html.DisplayNameFor(model => model.@GetValueExpression(property))
