--- a/netcore/Templates/ViewGenerator/List.cshtml
+++ b/netcore/Templates/ViewGenerator/List.cshtml
@@ -46,7 +46,7 @@
         var properties = Model.ModelMetadata.Properties;
         foreach (var property in properties)
         {
-            if (property.Scaffold && !property.IsPrimaryKey && !property.IsForeignKey)
+            if (property.Scaffold && !property.IsPrimaryKey && !property.IsForeignKey && !property.PropertyName.Equals("HasChild"))
             {
                 <th>
                     @@Html.DisplayNameFor(model => model.@GetValueExpression(property))
@@ -67,7 +67,7 @@
         @:<tr>
         foreach (PropertyMetadata property in properties)
         {
-            if (property.Scaffold && !property.IsPrimaryKey && !property.IsForeignKey)
+            if (property.Scaffold && !property.IsPrimaryKey && !property.IsForeignKey && !property.PropertyName.Equals("HasChild"))
             {
             <td>
                 @@Html.DisplayFor(modelItem => item.@GetValueExpression(property))
