--- a/netcore/Views/Shared/_AdminlteNetcoreBasicScripts.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreBasicScripts.cshtml
@@ -17,6 +17,10 @@
 <script src="~/lib/toastr/toastr.min.js"></script>
 <!-- Sweetalert -->
 <script src="~/lib/sweetalert/sweetalert.min.js"></script>
+<!-- Site -->
+<script src="~/js/site.min.js"></script>
+<!-- Serialize JSON -->
+<script src="~/lib/marioizquierdo-jquery.serializeJSON/jquery.serializejson.min.js"></script>
 <!-- AdminLTE App -->
 <script src="~/adminlte/dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
